@@ -5,6 +5,8 @@ documents those changes that are of interest to users and admins.
 ========================
  -- Sacct to report on job steps that never actually started.
  -- Added proctrack/rms to main slurm rpm.
+ -- Restructure slurmctld/agent.c logic to insure timely reaping of 
+    terminating pthreads.
 
 * Changes in SLURM 0.6.4
 ========================
